Add a simple runner